# apollo-mcp-server

./: .dockerignore  .env.example  .gitignore  BUILD_SUMMARY.md  CARGO_CHANGES.md  CLAUDE.md  Cargo.toml  DEV-README.md  Dockerfile  ROLE_BASED_ROUTING_IMPLEMENTATION.md  TEST_MANAGER_IMPLEMENTATION.md  TROUBLESHOOTING.md  docker-auth0-config.yaml  docker-compose.yml  it-ops.ai_Backend_Integration_Guide.md  it-ops.ai_Developer_Guide.md  it-ops.ai_Phase2_Summary.md  it-ops.ai_User_Guide.md  test-auth0-config.yaml  test-config-validation.sh
config/: README.md  roles-test-config.yaml  server-config.yaml  server-config.yaml:Zone.Identifier  test-manager-example.yaml
crates/apollo-mcp-server/: Cargo.toml
crates/apollo-mcp-server/src/: auth.rs  graphql.rs  health.rs  lib.rs  main.rs  role_router.rs  runtime.rs  schema_loader.rs  server.rs  test_manager.rs
crates/apollo-mcp-server/src/auth/: auth_tools.rs  config.rs  device_flow.rs  secure_logging.rs  session_manager.rs
crates/apollo-mcp-server/src/runtime/: auth0.rs  config.rs  schema_source.rs
crates/apollo-mcp-server/src/server/: role_config.rs  states.rs
crates/apollo-mcp-server/src/server/states/: running.rs  starting.rs
crates/itops-ai-auth/: Cargo.toml
crates/itops-ai-auth/src/: auth0.rs  lib.rs
docs/: DOCKER_REGISTRY_GUIDE.md  ROLE_BASED_CONFIGURATION_GUIDE.md
docs/plan/: Auth0-Phase2-Implementation-Plan.md  Auth0-Phase2.md
docs/source/: _sidebar.yaml
docs/source/guides/: auth0-extension.mdx
scripts/: build-docker.ps1  build-docker.sh
