[package]
name = "apollo-mcp-server"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

default-run = "apollo-mcp-server"

[features]
default = ["itops-auth0"]
itops-auth0 = ["dep:itops-ai-auth"]

[dependencies]
anyhow = "1.0.98"
apollo-compiler.workspace = true
apollo-federation.workspace = true
apollo-mcp-registry = { path = "../apollo-mcp-registry" }
apollo-schema-index = { path = "../apollo-schema-index" }
itops-ai-auth = { path = "../itops-ai-auth", optional = true }
axum = "0.8.4"
axum-extra = { version = "0.12.0", features = ["typed-header"] }
axum-otel-metrics = "0.12.0"
axum-tracing-opentelemetry = "0.33.0"
bon = "3.6.3"
clap = { version = "4.5.36", features = ["derive", "env"] }
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures.workspace = true
headers = "0.4.1"
http = "1.3.1"
humantime-serde = "1.1.1"
jsonschema = "0.42.0"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
jwks = { git = "https://github.com/chenhunghan/jwks", tag = "v0.5.3" }
lz-str = "0.2.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = [
  "grpc-tonic",
  "tonic",
  "http-proto",
  "metrics",
  "trace",
  "reqwest-rustls",
] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = [
  "spec_unstable_metrics_views",
] }
regex = "1.11.1"
reqwest-middleware = "0.5.1"
reqwest-tracing = { version = "0.7.0", features = ["opentelemetry_0_31"] }
reqwest.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rmcp = { version = "0.17", features = [
  "server",
  "transport-io",
  "transport-streamable-http-server",
] }
schemars = { version = "1.0.1", features = ["url2"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
shellexpand = { version = "3.1", default-features = false, features = ["base-0"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7.15"
tonic = "0.14"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
assert_fs = "1"
http-body-util = "0.1"
tempfile = "3"
chrono = { version = "0.4.41", default-features = false, features = ["now"] }
figment = { version = "0.10.19", features = ["test"] }
insta.workspace = true
mockito = "1.7.0"
opentelemetry_sdk = { version = "0.31.0", features = ["testing"] }
rstest.workspace = true
secrecy.workspace = true
serde_yaml = "0.9.34"
tokio.workspace = true
tower = "0.5.2"
tracing-test = "0.2.5"

[build-dependencies]
cruet = "0.15.0"
prettyplease = "0.2.37"
quote = "1.0.40"
serde.workspace = true
syn = "2.0.106"
toml = "1.0.0"

[lints]
workspace = true

[[bin]]
name = "apollo-mcp-server"
path = "src/main.rs"

[[bin]]
name = "config-schema"
path = "src/config_schema.rs"
test = false
